[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.12,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "unitree_legged_sdk"
version = "3.8.0"
description = "Python bindings (robot_interface) for the Unitree Go1 legged SDK"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }

[tool.setuptools]
# Extension-only distribution; no pure-python packages.
py-modules = []
